@@ -1534,6 +1534,8 @@ PANOPTICON_SITES_LBL_DROPDOWN_AUTOMATIONS="Automations"
 PANOPTICON_SITES_LBL_DROPDOWN_AUTOMATIONS_HEAD_EMAILS="Automated Emails"
 PANOPTICON_SITES_LBL_DROPDOWN_AUTOMATIONS_HEAD_BACKUP_SECURITY="Backup &amp; Security"
 
+PANOPTICON_SITES_LBL_DROPDOWN_TROUBLESHOOT="Troubleshooting"
+
 [MFA]
 PANOPTICON_MFA_HEAD_MFA_PAGE="Multi-factor Authentication"
 PANOPTICON_MFA_HEAD_SELECT_PAGE="Select an Authentication Method"
