@@ -479,7 +479,7 @@ SELECT IF(myCount >= 1, 1, 0) AS `condition` FROM (SELECT COUNT(*) AS `myCount` 
             <query><![CDATA[
 INSERT INTO `#__mailtemplates` (`type`, `language`, `subject`, `html`, `plaintext`)
 VALUES
-('site_down','*','🥳 [SITE_NAME] is back up','<div class=\"akemail-outer-wrapper\">\r\n<table>\r\n<tbody>\r\n<tr>\r\n<td width=\"10%\">&nbsp;</td>\r\n<td>\r\n<div class=\"akemail-wrapper\">\r\n<div class=\"akemail-container\"><!-- Logo Header -->\r\n<div class=\"akemail-logo\"><a href=\"[URL]\">&nbsp;<img src=\"[URL]/media/images/logo_bw.svg\" alt=\"Panopticon &mdash; Site Monitoring\">&nbsp;</a></div>\r\n<!-- Hello -->\r\n<div class=\"akemail-hello\">\r\n<p>Hello,</p>\r\n</div>\r\n<!-- Main-Topic -->\r\n<div class=\"akemail-main-topic\">\r\n<p>The site &ldquo;[SITE_NAME]&rdquo; is back up</p>\r\n</div>\r\n<!-- Message -->\r\n<div class=\"akemail-message\">\r\n<p>Panopticon has detected that your site &ldquo;<a href=\"[SITE_URL]\">[SITE_NAME]</a>&rdquo; appears to be accessible once again (the site is up).</p>\r\n<p>We would like to remind you that the site was inaccessible since [DOWNTIME_START] for [DOWNTIME_HUMAN].</p>\r\n</div>\r\n<!-- Area Offer/Announcement -->\r\n<div class=\"akemail-outro\">\r\n<p>Have a great day!</p>\r\n</div>\r\n<!-- Footer -->\r\n<div class=\"akemail-footer\">\r\n<p class=\"akemail-footer-sitelink\">&nbsp;<a href=\"[URL]\">Panopticon &mdash; Site Monitoring</a></p>\r\n</div>\r\n</div>\r\n<!-- Legal info -->\r\n<div class=\"akemail-legalinfo\">\r\n<p>This is an automated email. Please do not reply to it.</p>\r\n</div>\r\n</div>\r\n</td>\r\n<td width=\"10%\">&nbsp;</td>\r\n</tr>\r\n</tbody>\r\n</table>\r\n</div>','Hello,\r\n\r\n\r\nThe site “[SITE_NAME]” is down\r\n\r\n\r\nPanopticon has detected that your site “[SITE_NAME]”\r\n([SITE_URL]) appears to be accessible once again\r\n(the site is up).\r\n\r\nWe would like to remind you that the site was inaccessible since\r\n[DOWNTIME_START] for [DOWNTIME_HUMAN].\r\n\r\n\r\nHave a great day!\r\n\r\n------------------------------------------------------------------------------\r\n\r\nThis email was sent by the Panopticon installation on [URL]\r\nThis is an automated email. Please do not reply to it.');
+('site_up','*','🥳 [SITE_NAME] is back up','<div class=\"akemail-outer-wrapper\">\r\n<table>\r\n<tbody>\r\n<tr>\r\n<td width=\"10%\">&nbsp;</td>\r\n<td>\r\n<div class=\"akemail-wrapper\">\r\n<div class=\"akemail-container\"><!-- Logo Header -->\r\n<div class=\"akemail-logo\"><a href=\"[URL]\">&nbsp;<img src=\"[URL]/media/images/logo_bw.svg\" alt=\"Panopticon &mdash; Site Monitoring\">&nbsp;</a></div>\r\n<!-- Hello -->\r\n<div class=\"akemail-hello\">\r\n<p>Hello,</p>\r\n</div>\r\n<!-- Main-Topic -->\r\n<div class=\"akemail-main-topic\">\r\n<p>The site &ldquo;[SITE_NAME]&rdquo; is back up</p>\r\n</div>\r\n<!-- Message -->\r\n<div class=\"akemail-message\">\r\n<p>Panopticon has detected that your site &ldquo;<a href=\"[SITE_URL]\">[SITE_NAME]</a>&rdquo; appears to be accessible once again (the site is up).</p>\r\n<p>We would like to remind you that the site was inaccessible since [DOWNTIME_START] for [DOWNTIME_HUMAN].</p>\r\n</div>\r\n<!-- Area Offer/Announcement -->\r\n<div class=\"akemail-outro\">\r\n<p>Have a great day!</p>\r\n</div>\r\n<!-- Footer -->\r\n<div class=\"akemail-footer\">\r\n<p class=\"akemail-footer-sitelink\">&nbsp;<a href=\"[URL]\">Panopticon &mdash; Site Monitoring</a></p>\r\n</div>\r\n</div>\r\n<!-- Legal info -->\r\n<div class=\"akemail-legalinfo\">\r\n<p>This is an automated email. Please do not reply to it.</p>\r\n</div>\r\n</div>\r\n</td>\r\n<td width=\"10%\">&nbsp;</td>\r\n</tr>\r\n</tbody>\r\n</table>\r\n</div>','Hello,\r\n\r\n\r\nThe site “[SITE_NAME]” is down\r\n\r\n\r\nPanopticon has detected that your site “[SITE_NAME]”\r\n([SITE_URL]) appears to be accessible once again\r\n(the site is up).\r\n\r\nWe would like to remind you that the site was inaccessible since\r\n[DOWNTIME_START] for [DOWNTIME_HUMAN].\r\n\r\n\r\nHave a great day!\r\n\r\n------------------------------------------------------------------------------\r\n\r\nThis email was sent by the Panopticon installation on [URL]\r\nThis is an automated email. Please do not reply to it.');
 ]]></query>
         </action>
 
